Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumObjInteger.quorum
class Main
    action Main
        number num
        num = cast(number, 5)
        if num:GetValue() = 5.0
            output "passed"
        end
    end
end