Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextNumObjWrapped.quorum
class main
    action Main
        Number num
        num:setValue(7.5)
        text t = num
    end
end